Serialização de data com o fuso horário do Documento Fiscal

--- a/src/NotaFiscalNet.Core/NotaFiscalNet.Core.csproj
+++ b/src/NotaFiscalNet.Core/NotaFiscalNet.Core.csproj
@@ -245,6 +245,7 @@
     <Compile Include="Utils\CalculoUtil.cs" />
     <Compile Include="Utils\DecimalExtensions.cs" />
     <Compile Include="Utils\EnumEx.cs" />
+    <Compile Include="Utils\CalculadorFusoHorario.cs" />
     <Compile Include="Utils\MsgUtil.cs" />
     <Compile Include="Utils\NFeXmlReaderExtensions.cs" />
     <Compile Include="Utils\SerializationExtensions.cs" />
