--- a/tests/NotaFiscalNet.Core.Tests/NotaFiscalNet.Core.Tests.csproj
+++ b/tests/NotaFiscalNet.Core.Tests/NotaFiscalNet.Core.Tests.csproj
@@ -69,6 +69,7 @@
     <Compile Include="Dados\RepositorioIdentificacaoDocumentoFiscal.cs" />
     <Compile Include="Dados\RepositorioReferenciaDocumentoFiscalNotaFiscal.cs" />
     <Compile Include="Dados\RepositorioReferenciaDocumentoFiscalNotaFiscalProdutor.cs" />
+    <Compile Include="CompraTests.cs" />
     <Compile Include="IdentificacaoDocumentoFiscalTests.cs" />
     <Compile Include="ReferenciaDocumentoFiscalCollectionTests.cs" />
     <Compile Include="ReferenciaDocumentoFiscalNfeTests.cs" />
@@ -91,6 +92,18 @@
     <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Xmls\Compra1.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Xmls\Compra2.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Xmls\Compra3.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Xmls\Compra4.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="Xmls\IdentificacaoDocumentoFiscal4.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
