--- a/tests/NotaFiscalNet.Core.Tests/NotaFiscalNet.Core.Tests.csproj
+++ b/tests/NotaFiscalNet.Core.Tests/NotaFiscalNet.Core.Tests.csproj
@@ -66,11 +66,13 @@
     <Compile Include="Comum\CarregadorXml.cs" />
     <Compile Include="Comum\Serializador.cs" />
     <Compile Include="Dados\Repositorio.cs" />
+    <Compile Include="Dados\RepositorioAvulsa.cs" />
     <Compile Include="Dados\RepositorioInformacoesExportacao.cs" />
     <Compile Include="Dados\RepositorioIdentificacaoDocumentoFiscal.cs" />
     <Compile Include="Dados\RepositorioReferenciaDocumentoFiscalNotaFiscal.cs" />
     <Compile Include="Dados\RepositorioReferenciaDocumentoFiscalNotaFiscalProdutor.cs" />
     <Compile Include="CompraTests.cs" />
+    <Compile Include="AvulsaTests.cs" />
     <Compile Include="InformacoesExportacaoTests.cs" />
     <Compile Include="IdentificacaoDocumentoFiscalTests.cs" />
     <Compile Include="ReferenciaDocumentoFiscalCollectionTests.cs" />
@@ -94,6 +96,15 @@
     <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Xmls\Avulsa3.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Xmls\Avulsa2.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Xmls\Avulsa1.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="Xmls\InformacoesExportacao1.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
