--- a/appveyor.yml
+++ b/appveyor.yml
@@ -6,9 +6,6 @@ environment:
   GithubPersonalAccessToken:
     secure: xDwP76rtY02prdj3ok14WISThtpw7pK4auHyTERwXGz3cqFLsorP0wJyEIDUu6UP
 
-init:
-- ps: iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
-
 skip_tags: true
 
 configuration: Release
@@ -27,9 +24,6 @@ after_build:
 artifacts:
 - path: NotaFiscalNet.zip
   name: NotaFiscalNet
-
+  
 after_test:
-- ps: ./build-docs.ps1 $env:APPVEYOR_BUILD_FOLDER $env:APPVEYOR_BUILD_VERSION $env:GithubEmail $env:GithubUsername $env:GithubPersonalAccessToken
-
-on_finish:
-- ps: $blockRdp = $true; iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
+- ps: ./build-docs.ps1 $env:APPVEYOR_REPO_BRANCH $env:APPVEYOR_PULL_REQUEST_NUMBER $env:APPVEYOR_REPO_COMMIT_MESSAGE $env:APPVEYOR_BUILD_FOLDER $env:APPVEYOR_BUILD_VERSION $env:GithubEmail $env:GithubUsername $env:GithubPersonalAccessToken
