--- a/tests/NotaFiscalNet.Core.Tests/NotaFiscalNet.Core.Tests.csproj
+++ b/tests/NotaFiscalNet.Core.Tests/NotaFiscalNet.Core.Tests.csproj
@@ -86,6 +86,7 @@
     <Compile Include="ReferenciaDocumentoFiscalEcfTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Validacao\CompraValidadorTests.cs" />
+    <Compile Include="Validacao\IdentificacaoDocumentoFiscalValidadorTests.cs" />
     <Compile Include="Validacao\ReferenciaDocumentoFiscalCteValidadorTests.cs" />
     <Compile Include="Validacao\ReferenciaDocumentoFiscalEcfValidadorTests.cs" />
     <Compile Include="Validacao\ReferenciaDocumentoFiscalNotaFiscalProdutorValidadorTests.cs" />
